# TP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  compile.bat  execute.bat  field.txt  main.cpp  test_all.bat
Army/src/: CMakeLists.txt  Catapult.h  Horseman.h  HumanCatapult.cpp  HumanCatapult.h  HumanFactory.cpp  HumanFactory.h  HumanInfantry.cpp  HumanMage.cpp  HumanMage.h  Infantry.h  Mage.h  OrcCatapult.cpp  OrcCatapult.h  OrcFactory.cpp  OrcFactory.h  OrcInfantry.cpp  OrcInfantry.h  OrcMage.cpp  OrcMage.h  Point.cpp  Point.h  Unit.cpp  Unit.h  Warrior.cpp  Warrior.h  WarriorFactory.h
Army/src/Hero/: Hero.cpp  Hero.h  HeroBuilder.cpp  HeroBuilder.h  HeroDirector.cpp  HeroDirector.h  HumanHeroBuilder.cpp  HumanHeroBuilder.h  HumanKnightBuilder.cpp  HumanKnightBuilder.h  HumanWizardBuilder.cpp  HumanWizardBuilder.h  OrcBerserkBuilder.cpp  OrcBerserkBuilder.h  OrcHeroBuilder.cpp  OrcHeroBuilder.h  OrcShamanBuilder.cpp  OrcShamanBuilder.h
Army/src/Horseman/: Horseman.cpp  Horseman.h  HumanHorseman.cpp  HumanHorseman.h  OrcHorseman.cpp  OrcHorseman.h
Army/src/Infantry/: HumanInfantry.h  Infantry.h  OrcInfantry.cpp  OrcInfantry.h
Army/src/Mage/: HumanMage.h  Mage.h  OrcMage.cpp  OrcMage.h
Army/test/: CMakeLists.txt  test.cpp
code/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Player.cpp  Player.h  army_tests  cmake_install.cmake  main.cpp
code/Army/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
code/Army/docs/: architercure.md  tests.md
code/Army/include/: Attack.h  Point.h
code/Army/include/Attack/: Attack.h  DoubleAttack.h  PercentAttack.h  UsualAttack.h
code/Army/include/Factory/: HumanFactory.h  OrcFactory.h  UnitFactory.h
code/Army/include/Hero/: Hero.h  HeroBuilder.h  HeroDecorator.h  HumanHeroBuilder.h  OrcHeroBuilder.h
code/Army/include/Unit/: BaseUnit.h  DoubleAttackUnit.h  FireAttackUnit.h  Horseman.h  Infantry.h  Mage.h  Unit.h  UnitDecorator.h
code/Army/include/Visitor/: file_writing_visitor.h  visitor.h
code/Army/src/: Attack.cpp  CMakeLists.txt  CTestTestfile.cmake  Makefile  Point.cpp  Unit.cpp  cmake_install.cmake
code/Army/src/Attack/: Attack.cpp  DoubleAttack.cpp  PercentAttack.cpp  UsualAttack.cpp
code/Army/src/Factory/: HumanFactory.cpp  OrcFactory.cpp
code/Army/src/Hero/: Hero.cpp  HeroBuilder.cpp  HeroDecorator.cpp  HeroDirector.cpp  HumanHeroBuilder.cpp  OrcHeroBuilder.cpp
code/Army/src/Unit/: BaseUnit.cpp  DoubleAttackUnit.cpp  FireAttackUnit.cpp  UnitDecorator.cpp
code/Army/src/Visitor/: file_writing_visitor.cpp
code/Army/src/headers/Factory/: HumanFactory.h  Infantry.h  Mage.h  WarriorFactory.h
code/Army/src/headers/Hero/: Hero.h  HeroBuilder.h  HeroDirector.h  HumanHeroBuilder.h  OrcHeroBuilder.h
code/Army/test/: CMakeLists.txt  test.cpp
code/Game/: CMakeLists.txt
code/Game/include/: Game.h  Painter.h
code/Game/src/: Game.cpp  Painter.cpp
code/Player/: CMakeLists.txt
code/Player/include/: Player.h
code/Player/src/: Player.cpp
code/settings/: characteristics.h
docs/: patterns.md
lib/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googletest/test/: gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py
tests/: army_test.cpp  army_tests.cpp  decorator_tests.cpp  main.cpp
